# ansible-cutter

./: .gitignore  README.md
kolla-test/: README.md  kolla-test
{{cookiecutter.appname}}/: MANIFEST.in  README.md  ansible.cfg  setup.cfg  {{cookiecutter.appname}}
{{cookiecutter.appname}}/ansible/: gather-facts.yml  ping.yml  site.yml
{{cookiecutter.appname}}/ansible/group_vars/: all.yml
{{cookiecutter.appname}}/ansible/roles/chrony/defaults/: main.yml
{{cookiecutter.appname}}/ansible/roles/chrony/handlers/: main.yml
{{cookiecutter.appname}}/ansible/roles/chrony/tasks/: config.yml  deploy.yml  main.yml  remove.yml
{{cookiecutter.appname}}/ansible/roles/chrony/templates/: chrony.conf.j2
{{cookiecutter.appname}}/ansible/roles/chrony/vars/: main.yml
{{cookiecutter.appname}}/ansible/roles/common/tasks/: main.yml  pre_install.yml
{{cookiecutter.appname}}/ansible/roles/httpd/handlers/: main.yml
{{cookiecutter.appname}}/ansible/roles/httpd/tasks/: base.yml  config.yml  deploy.yml  main.yml  start.yml
{{cookiecutter.appname}}/ansible/roles/httpd/templates/: hosts.j2  static_site_conf.j2
{{cookiecutter.appname}}/ansible/roles/prechecks/defaults/: main.yml
{{cookiecutter.appname}}/ansible/roles/prechecks/tasks/: main.yml
{{cookiecutter.appname}}/ansible/roles/prechecks/vars/: main.yml
{{cookiecutter.appname}}/etc/{{cookiecutter.appname}}/: env  extra-vars.yml  hosts
{{cookiecutter.appname}}/etc/{{cookiecutter.appname}}/default/: extra-vars.yml  hosts
{{cookiecutter.appname}}/tools/: {{cookiecutter.appname}}
(+8 files in other folders)
