[metadata]
name = {{cookiecutter.appname}}
summary = Ansible Deployment scripts for quickly deploying
description-file = README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/{{cookiecutter.appname}}/latest/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    {{cookiecutter.appname}}
data_files =
    /usr/share/{{cookiecutter.appname}}/ansible/ = ansible/**
    /usr/share/{{cookiecutter.appname}}/etc_examples/ = etc/**

scripts =
    tools/{{cookiecutter.appname}}

[entry_points]
console_scripts =
    {{cookiecutter.appname}} = {{cookiecutter.appname}}.cmd:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
